--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,4 +1,5 @@
 @import './helpers/reset.scss';
+@import './helpers/_animation.scss';
 // @import '../../node_modules/vue-material/dist/vue-material.min.css';
 @import './helpers/_functions.scss';
 @import './helpers/_mixins.scss';
