--- a/src/style/helpers/_parameters.scss
+++ b/src/style/helpers/_parameters.scss
@@ -20,18 +20,18 @@ $color-twitter: #55acee;
 // Borders 
 $border-light: solid 1px rgba(0, 0, 0, .05);
 // Font Size
-$font-size-biggest: 2.8rem;
-$font-size-largest: 2.3rem;
-$font-size-large: 1.2rem;
-$font-size-base: 1rem;
-$font-size-small: .9rem;
-$font-size-smallest: .75rem;
+$font-size-biggest: 2.8px;
+$font-size-largest: 2.3px;
+$font-size-large: 1.2px;
+$font-size-base: 1px;
+$font-size-small: .9px;
+$font-size-smallest: .75px;
 // Spacing
-$spacing-small: .75rem;
-$spacing-single: 1rem;
-$spacing-double: 2rem;
-$spacing-triple: 3rem;
-$spacing-big: 6rem;
+$spacing-small: .75px;
+$spacing-single: 1px;
+$spacing-double: 2px;
+$spacing-triple: 3px;
+$spacing-big: 6px;
 // Media queries 
 $desktop: 800px;
 $tablet: 600px;
