--- a/src/style/helpers/common.scss
+++ b/src/style/helpers/common.scss
@@ -367,24 +367,32 @@ body {
   // }
 }
 
-/*在768 和991 像素之间的屏幕里，小屏幕，主要是PAD*/
-@media (min-width: 768px) and (max-width: 991px) {
+
+@media (max-width: 768px){
   .hidden-no-lg {
     display: none;
   }
   
 }
 
-/*在480 和767 像素之间的屏幕里，超小屏幕，主要是手机*/
-@media (min-width: 480px) and (max-width: 767px) {
-  .hidden-no-lg {
-    display: none;
-  }
-}
+// /*在768 和991 像素之间的屏幕里，小屏幕，主要是PAD*/
+// @media (min-width: 768px) and (max-width: 991px) {
+//   .hidden-no-lg {
+//     display: none;
+//   }
+  
+// }
 
-/*在小于480 像素的屏幕，微小屏幕，更低分辨率的手机*/
-@media (max-width: 479px) {
-  .hidden-no-lg {
-    display: none;
-  }
-}
+// /*在480 和767 像素之间的屏幕里，超小屏幕，主要是手机*/
+// @media (min-width: 480px) and (max-width: 767px) {
+//   .hidden-no-lg {
+//     display: none;
+//   }
+// }
+
+// /*在小于480 像素的屏幕，微小屏幕，更低分辨率的手机*/
+// @media (max-width: 479px) {
+//   .hidden-no-lg {
+//     display: none;
+//   }
+// }
