--- a/src/style/helpers/common.scss
+++ b/src/style/helpers/common.scss
@@ -235,12 +235,32 @@ body {
         a {
           color: cornflowerblue;
         }
+        ul {
+          display: block;
+          list-style-type: disc;
+          margin-block-start: 1em;
+          margin-block-end: 1em;
+          margin-inline-start: 0px;
+          margin-inline-end: 0px;
+          padding-inline-start: 20px;
+          li {
+            list-style: unset;
+          }
+        }
 
         img {
           width: 100%;
+          cursor: pointer;
         }
-
-        p {
+        code:not(.hljs) {
+          background-color: rgba(27,31,35,.05);
+          border-radius: 3px;
+          font-size: 85%;
+          margin: 0;
+          padding: .2em .4em;      
+          font-family: Consolas,Menlo,Courier,monospace;
+        }
+        p,li {
           width: 100%;
           white-space: normal;
           line-height: 2
