--- a/src/style/helpers/common.scss
+++ b/src/style/helpers/common.scss
@@ -265,14 +265,14 @@ body {
                 cursor: pointer;
             }
 
-            code:not(.hljs) {
-                background-color: rgba(27, 31, 35, .05);
-                border-radius: 3px;
-                font-size: 85%;
-                margin: 0;
-                padding: .2em .4em;
-                font-family: Consolas, Menlo, Courier, monospace;
-            }
+            // code:not(.hljs) {
+            //     background-color: rgba(27, 31, 35, .05);
+            //     border-radius: 3px;
+            //     font-size: 85%;
+            //     margin: 0;
+            //     padding: .2em .4em;
+            //     font-family: Consolas, Menlo, Courier, monospace;
+            // }
 
             p,
             li {
