--- a/src/style/helpers/common.scss
+++ b/src/style/helpers/common.scss
@@ -1,9 +1,9 @@
-$font-class: font !default;
-$height-class: h;
-$width-class: w;
+$font-class       : font !default;
+$height-class     : h;
+$width-class      : w;
 $line-height-class: lh;
 $font-weight-class: fw;
-$i:1;
+$i                :1;
 
 @for $i from 1 through 15 {
     .#{$font-class}-#{$i} {
@@ -29,26 +29,26 @@ $i:1;
 
 body {
     background-color: #f7f7f7;
-    color: #4a4a4a;
+    color           : #4a4a4a;
 }
 
 .tg-card {
     background-color: #fff;
-    border-radius: 4px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, .05), 0 0 1px rgba(0, 0, 0, .1);
+    border-radius   : 4px;
+    box-shadow      : 0 4px 10px rgba(0, 0, 0, .05), 0 0 1px rgba(0, 0, 0, .1);
 }
 
 .tg-heading {
-    display: block;
-    font-size: 0.7px;
+    display       : block;
+    font-size     : 0.7px;
     letter-spacing: 1px;
-    margin-bottom: 5px;
+    margin-bottom : 5px;
     text-transform: uppercase;
 }
 
 .tg-labels {
-    color: #7a7a7a;
-    font-size: 0.75em;
+    color         : #7a7a7a;
+    font-size     : 0.75em;
     letter-spacing: 0.1em;
     text-transform: uppercase;
 }
@@ -56,21 +56,21 @@ body {
 // @media (min-width: 1200px)  {
 // @media (min-width: 992px)  {
 .tg-navbar {
-    padding: 0;
+    padding : 0;
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 11;
-    height: 80px;
+    top     : 0;
+    left    : 0;
+    width   : 100%;
+    z-index : 11;
+    height  : 80px;
 
     &__container {
-        margin-right: auto;
-        margin-left: auto;
-        padding-left: 15px;
+        margin-right : auto;
+        margin-left  : auto;
+        padding-left : 15px;
         padding-right: 15px;
-        height: 80px;
-        width: 90%;
+        height       : 80px;
+        width        : 90%;
 
         // @media (min-width: 768px) {
         //   width: 760px;
@@ -82,27 +82,27 @@ body {
         //   width: 1170px;
         // }
         .inner {
-            position: relative;
-            float: left;
-            width: 100%;
-            display: flex;
+            position       : relative;
+            float          : left;
+            width          : 100%;
+            display        : flex;
             justify-content: space-between;
-            height: 80px;
-            line-height: 80px;
-            vertical-align: middle;
+            height         : 80px;
+            line-height    : 80px;
+            vertical-align : middle;
 
             >h1 {
                 @media (max-width: 480px) {
                     font-size: 20px;
-                    display: none;
+                    display  : none;
                 }
 
                 font-size: 16px;
 
                 a {
                     font-weight: 600;
-                    color: #fff;
-                    transition: all 0.3s;
+                    color      : #fff;
+                    transition : all 0.3s;
 
                     &:hover {
                         opacity: 0.7;
@@ -116,16 +116,16 @@ body {
                 }
 
                 >ul {
-                    display: flex;
+                    display        : flex;
                     justify-content: space-around;
-                    flex-wrap: nowrap;
+                    flex-wrap      : nowrap;
 
                     .ivu-dropdown-rel {
                         >a {
-                            color: #fff;
-                            padding: 0 1vw;
-                            cursor: pointer;
-                            font-size: 14px;
+                            color     : #fff;
+                            padding   : 0 1vw;
+                            cursor    : pointer;
+                            font-size : 14px;
                             transition: all 0.3s;
 
                             &:hover {
@@ -135,10 +135,10 @@ body {
                     }
 
                     >li {
-                        color: #fff;
-                        padding: 0 1vw;
-                        cursor: pointer;
-                        font-size: 14px;
+                        color     : #fff;
+                        padding   : 0 1vw;
+                        cursor    : pointer;
+                        font-size : 14px;
                         transition: all 0.3s;
 
                         &:hover {
@@ -153,19 +153,19 @@ body {
 
 .header {
     overflow: hidden;
-    height: 42vw;
+    height  : 42vw;
     position: relative;
-    z-index: 10;
+    z-index : 10;
 
     h2 {
         white-space: nowrap;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        text-align: center;
-        position: absolute;
-        color: white;
-        font-size: 30px;
+        top        : 50%;
+        left       : 50%;
+        transform  : translate(-50%, -50%);
+        text-align : center;
+        position   : absolute;
+        color      : white;
+        font-size  : 30px;
         font-weight: 400;
 
         @media (max-width: 480px) {
@@ -179,33 +179,33 @@ body {
 }
 
 .tg-index {
-    padding-top: 20px;
+    padding-top   : 20px;
     padding-bottom: 100px;
-    margin: auto;
-    display: flex;
-    position: relative;
-    max-width: 1200px;
+    margin        : auto;
+    display       : flex;
+    position      : relative;
+    max-width     : 1200px;
 
     &__left {
-        position: relative;
+        position  : relative;
         min-height: 80%;
-        flex: 1;
-        width: 260px;
+        flex      : 1;
+        width     : 260px;
 
         .tg-profile {
             position: sticky;
-            top: 40%;
+            top     : 40%;
         }
     }
 
     .tg-center {
         @media (min-width: 769px) {
             margin-left: 1px;
-            width: calc(100% - 260px);
+            width      : calc(100% - 260px);
         }
 
         @media (max-width: 768px) {
-            width: 100%;
+            width : 100%;
             margin: auto;
         }
 
@@ -223,15 +223,19 @@ body {
 
 .article-item {
     &__title {
-        text-align: center;
+        text-align    : center;
+        padding-bottom: 15px;
 
         p {
-            margin: 10px 0;
+            // margin: 10px 0;
         }
 
-        h1 {
-            display: inline;
-            font-size: 20px;
+        h1,
+        h2,
+        h3,
+        h4,
+        h5 {
+            font-size: 200%;
         }
     }
 
@@ -239,20 +243,36 @@ body {
         padding: 20px;
 
         .markdown-html {
-            font-size: 16px;
             overflow: hidden;
+
+            h1 {
+                display: none
+            }
+
+            h2,
+            h3,
+            h4,
+            h5 {
+                // display: inline;
+                font-size: 200%;
+            }
+
+            p {
+                font-size: 16px;
+
+            }
 
             a {
                 color: cornflowerblue;
             }
 
             ul {
-                display: block;
-                list-style-type: disc;
-                margin-block-start: 1em;
-                margin-block-end: 1em;
-                margin-inline-start: 0px;
-                margin-inline-end: 0px;
+                display             : block;
+                list-style-type     : disc;
+                margin-block-start  : 1em;
+                margin-block-end    : 1em;
+                margin-inline-start : 0px;
+                margin-inline-end   : 0px;
                 padding-inline-start: 20px;
 
                 li {
@@ -261,7 +281,7 @@ body {
             }
 
             img {
-                width: 100%;
+                width : 100%;
                 cursor: pointer;
             }
 
@@ -276,31 +296,31 @@ body {
 
             p,
             li {
-                width: 100%;
+                width      : 100%;
                 white-space: normal;
-                line-height: 2
+                line-height: 1.5rem
             }
         }
     }
 }
 
 .layout-footer-center {
-    height: 260px;
+    height          : 260px;
     background-color: #2f3032;
-    position: relative;
-    z-index: 10;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    color: rgba(255, 255, 255, 0.8);
-    font-size: 14px;
+    position        : relative;
+    z-index         : 10;
+    display         : flex;
+    justify-content : center;
+    align-items     : center;
+    flex-direction  : column;
+    color           : rgba(255, 255, 255, 0.8);
+    font-size       : 14px;
 
     .copy-right {
-        text-align: center;
-        line-height: 2;
+        text-align   : center;
+        line-height  : 2;
         // margin-top: 3px;
-        width: 100%;
+        width        : 100%;
 
         // padding: 2px;
         // border-top: 1px solid rgba(255, 255, 255, 0.1);
@@ -311,37 +331,37 @@ body {
 
     .signature {
         font-size: 16px;
-        height: 20px;
+        height   : 20px;
     }
 
     .link-list {
-        display: flex;
+        display        : flex;
         justify-content: space-around;
 
         .dot {
-            display: inline-block;
-            width: 5px;
-            height: 5px;
-            margin: 10px;
+            display         : inline-block;
+            width           : 5px;
+            height          : 5px;
+            margin          : 10px;
             background-color: #fff;
-            border-radius: 10px;
+            border-radius   : 10px;
         }
     }
 
     .media-list {
-        display: flex;
+        display        : flex;
         justify-content: space-around;
     }
 }
 
 .center-item-placeholder {
-    overflow: hidden;
+    overflow     : hidden;
     margin-bottom: 16px;
 
     >.img-wrapper {
-        overflow: hidden;
-        height: 260px;
-        max-height: 260px;
+        overflow        : hidden;
+        height          : 260px;
+        max-height      : 260px;
         background-color: #eee;
     }
 
@@ -349,20 +369,20 @@ body {
         padding: 16px;
 
         >.tg-small {
-            font-size: 14px;
-            margin-bottom: 5px;
-            width: 100px;
-            height: 20px;
+            font-size       : 14px;
+            margin-bottom   : 5px;
+            width           : 100px;
+            height          : 20px;
             background-color: #eee;
         }
 
         >h1 {
-            width: 30px;
-            height: 20px;
+            width           : 30px;
+            height          : 20px;
             background-color: #eee;
-            margin-bottom: 0.8px;
-            transition: all 0.3s;
-            cursor: pointer;
+            margin-bottom   : 0.8px;
+            transition      : all 0.3s;
+            cursor          : pointer;
 
             &:hover {
                 color: #3273dc;
@@ -371,17 +391,17 @@ body {
     }
 
     >.readmore {
-        padding: 0 1.5px 1.5px;
-        height: 1px;
-        width: 2px;
+        padding         : 0 1.5px 1.5px;
+        height          : 1px;
+        width           : 2px;
         background-color: #eee;
 
         span {
             background-color: whitesmoke;
-            padding: 0.3px 0.6px;
-            border-radius: 5px;
-            font-size: 12px;
-            cursor: pointer;
+            padding         : 0.3px 0.6px;
+            border-radius   : 5px;
+            font-size       : 12px;
+            cursor          : pointer;
         }
     }
 }
@@ -428,7 +448,7 @@ body {
 // }
 
 .gauss-style {
-    filter: blur(10px);
+    filter   : blur(10px);
     transform: scale(1);
 
 }
